# SneakDex

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.dev.yml  prometheus.prod.yml  prometheus.yml
app/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  env.template  package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/app/_components/: SearchForm.tsx
app/app/_contexts/: AppContext.tsx
app/app/_types/: ResponseTypes.tsx
app/app/search/: layout.tsx  (+3 more)
frontend/: Dockerfile
frontend/app/: page.tsx
monitoring/: prometheus.prod.yml  prometheus.yml
monitoring/prometheus/: prometheus.yml
services/crawler/: .air.toml  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.template  go.mod  go.sum
services/indexer/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  __init__.py  api.txt  config.py  consumer.py  docker-compose.prod.yml  docker-compose.yml  env.template  main.py  orchestrator.py  requirements-cuda.txt  requirements.txt
services/parser/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.template
services/parser/src/: config.rs  error.rs  kafka_client.rs  main.rs  models.rs  monitor.rs
services/parser/src/internal/: mod.rs
services/parser/src/internal/config/: mod.rs  validation.rs
services/parser/src/internal/core/: mod.rs
services/parser/src/internal/monitor/: mod.rs
services/parser/src/internal/parser/: extractors.rs  language_detector.rs  mod.rs  models.rs
services/parser/src/parser/: extractors.rs  language_detector.rs  mod.rs  text_utils.rs
services/query-api/: .gitignore  Dockerfile  Dockerfile.dev  requirements.txt
(+46 files in other folders)
