[package]
name = "parser"
version = "0.1.0"
edition = "2021"
authors = ["SneakDex Team"]
description = "HTML parser service for SneakDex search engine"

[dependencies]
# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# HTML parsing
scraper = "0.18.1"
url = "2.5.0"
regex = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and error handling
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"
envy = "0.4"

# Utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

