[package]
name = "sneakdex-parser"
version = "1.0.0"
edition = "2021"
authors = ["Dhruv Rishishwar"]
description = "HTML parser service for SneakDex search engine"

[dependencies]

# ───── Kafka client ─────
rdkafka = { version = "0.38", features = ["cmake-build", "tokio"] }

# ───── HTML & text processing ─────
once_cell = "1.19"
readability = "0.3"
regex = "1.11"
scraper = "0.23"
url = "2.5"
whatlang = "0.16"

# ───── Serialization & deserialization ─────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ───── Error handling ─────
anyhow = "1.0"
thiserror = "2.0"

# ───── Logging & tracing ─────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ───── Configuration ─────
config = "0.15"
dotenv = "0.15"
envy = "0.4"

# ───── Async runtime & concurrency ─────
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.46", features = ["full"] }

# ───── Web server / health checks ─────
actix-web = "4.4"

# ───── Date & time ─────
chrono = { version = "0.4", features = ["serde"] }
